@@ -133,6 +133,11 @@ void* ags_midiin_get_buffer(AgsSequencer *sequencer,
 void* ags_midiin_get_next_buffer(AgsSequencer *sequencer,
 				 guint *buffer_length);
 
+void ags_midiin_lock_buffer(AgsSequencer *sequencer,
+			    void *buffer);
+void ags_midiin_unlock_buffer(AgsSequencer *sequencer,
+			      void *buffer);
+
 void ags_midiin_set_start_note_offset(AgsSequencer *sequencer,
 				      guint start_note_offset);
 guint ags_midiin_get_start_note_offset(AgsSequencer *sequencer);
@@ -393,6 +398,9 @@ ags_midiin_sequencer_interface_init(AgsSequencerInterface *sequencer)
   sequencer->get_buffer = ags_midiin_get_buffer;
   sequencer->get_next_buffer = ags_midiin_get_next_buffer;
 
+  sequencer->lock_buffer = ags_midiin_lock_buffer;
+  sequencer->unlock_buffer = ags_midiin_unlock_buffer;
+
   sequencer->set_start_note_offset = ags_midiin_set_start_note_offset;
   sequencer->get_start_note_offset = ags_midiin_get_start_note_offset;
 
@@ -408,6 +416,7 @@ ags_midiin_init(AgsMidiin *midiin)
   gchar *str;
   gchar *segmentation;
 
+  guint i;
   guint denumerator, numerator;
   gboolean use_alsa;  
 
@@ -496,6 +505,15 @@ ags_midiin_init(AgsMidiin *midiin)
   midiin->ring_buffer_size[1] = 0;
   
   /* buffer */
+  midiin->buffer_mutex = (pthread_mutex_t **) malloc(4 * sizeof(pthread_mutex_t *));
+
+  for(i = 0; i < 4; i++){
+    midiin->buffer_mutex[i] = (pthread_mutex_t *) malloc(sizeof(pthread_mutex_t));
+
+    pthread_mutex_init(midiin->buffer_mutex[i],
+		       NULL);
+  }
+
   midiin->buffer = (char **) malloc(4 * sizeof(char *));
 
   midiin->buffer[0] = NULL;
@@ -2405,6 +2423,64 @@ ags_midiin_get_next_buffer(AgsSequencer *sequencer,
   }
   
   return(buffer);
+}
+
+void
+ags_midiin_lock_buffer(AgsSequencer *sequencer,
+		       void *buffer)
+{
+  AgsMidiin *midiin;
+
+  pthread_mutex_t *buffer_mutex;
+  
+  midiin = AGS_MIDIIN(sequencer);
+
+  buffer_mutex = NULL;
+
+  if(midiin->buffer != NULL){
+    if(buffer == midiin->buffer[0]){
+      buffer_mutex = midiin->buffer_mutex[0];
+    }else if(buffer == midiin->buffer[1]){
+      buffer_mutex = midiin->buffer_mutex[1];
+    }else if(buffer == midiin->buffer[2]){
+      buffer_mutex = midiin->buffer_mutex[2];
+    }else if(buffer == midiin->buffer[3]){
+      buffer_mutex = midiin->buffer_mutex[3];
+    }
+  }
+  
+  if(buffer_mutex != NULL){
+    pthread_mutex_lock(buffer_mutex);
+  }
+}
+
+void
+ags_midiin_unlock_buffer(AgsSequencer *sequencer,
+			 void *buffer)
+{
+  AgsMidiin *midiin;
+
+  pthread_mutex_t *buffer_mutex;
+  
+  midiin = AGS_MIDIIN(sequencer);
+
+  buffer_mutex = NULL;
+
+  if(midiin->buffer != NULL){
+    if(buffer == midiin->buffer[0]){
+      buffer_mutex = midiin->buffer_mutex[0];
+    }else if(buffer == midiin->buffer[1]){
+      buffer_mutex = midiin->buffer_mutex[1];
+    }else if(buffer == midiin->buffer[2]){
+      buffer_mutex = midiin->buffer_mutex[2];
+    }else if(buffer == midiin->buffer[3]){
+      buffer_mutex = midiin->buffer_mutex[3];
+    }
+  }
+
+  if(buffer_mutex != NULL){
+    pthread_mutex_unlock(buffer_mutex);
+  }
 }
 
 void
