@@ -120,6 +120,7 @@ struct _AgsJackMidiin
   
   AgsUUID *uuid;
 
+  pthread_mutex_t **buffer_mutex;
   char **buffer;
   guint buffer_size[4];
 
